# AI-Agents-Crash-Course

./: .gitignore  README.md
Daily Learnings/: Learnings.md
aihero/app/: app.py  logs.py  pyproject.toml  search_tools.py
aihero/course/: AI Agents Course.ipynb  pyproject.toml
aihero/course/.ipynb_checkpoints/: AI Agents Course-checkpoint.ipynb
aihero/project/: Project & Homework.ipynb  pyproject.toml
aihero/project/.ipynb_checkpoints/: Project & Homework-checkpoint.ipynb
app/: README.md  pyproject.toml  requirements.txt
app/code/: ingest.py  search_agent.py
app/eval/: data-gen.ipynb  evaluation.ipynb
